# wireless-esp8266-dap

./: .gitignore  .gitmodules  CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.esp32dev
WirelessDAP_main/: CMakeLists.txt  DAP_handle.c  DAP_handle.h  dap_tcp_server.c  dap_tcp_server.h  kcp_server.c  main.c  monitor.c  tcp_netconn.c  tcp_server.c  timer.c  timer.h  uart_bridge.c  usbip_server.c  wifi_configuration.h  wifi_handle.c  wifi_handle.h
components/DAP/: CMakeLists.txt
components/DAP/config/: DAP_config.h
components/DAP/include/: gpio_common.h  gpio_op.h  swo.h
components/DAP/source/: SWO.c  spi_op.c  spi_switch.c
components/USBIP/: CMakeLists.txt  usb_descriptor.h  usb_handle.c
main/: CMakeLists.txt  DAP_handle.c  Handle.c  Handle.h  bps_config.h  dap_init.c  dap_init.h  main.c  pr_choose.c  pr_choose.h  tcp.c  tcp.h  tcp_netconn.h  tcp_server1.c  tcp_server1.h  uart_bridge.c  uart_bridge.h  uart_config.c  uart_config.h  wifi_configuration.h  wifi_handle.c
